[package]
name = "rust_cpp_playground"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["staticlib"]

[build-dependencies]
cbindgen = "~0.20"

[dependencies]
opaque-pointer = {version = "0.8.6", features = ["lender"]}
